// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Solver trace (end-to-end) > replay snapshots > EUF contradiction (congruence closure) 1`] = `
"=== Formula ===
  (and (= x y) (!= (f x) (f y)))

=== Variables ===
  p1: (= x y)
  p2: (!= (f x) (f y))
  proxy p3: (and p1 p2)

[clauses]
  #0: ~p3 v p1        -> 2 open
  #1: ~p3 v p2        -> 2 open
  #2: ~p1 v ~p2 v p3  -> 3 open
  #3: p3              -> unit: p3

[propagate]  p3 = true  (forced by #3: p3)
  trail: { p3@0 }
[clauses]
  #0: false v p1        -> unit: p1
  #1: false v p2        -> unit: p2
  #2: ~p1 v ~p2 v true  -> satisfied
  #3: true              -> satisfied

[theory]  euf assert p3: ok
[theory]  arithmetic assert p3: ok
[propagate]  p1 = true  (forced by #0: ~p3 v p1)
  trail: { p3@0, p1@0 }
[clauses]
  #0: false v true        -> satisfied
  #1: false v p2          -> unit: p2
  #2: false v ~p2 v true  -> satisfied
  #3: true                -> satisfied

[theory]  euf assert p1: ok
    classes: {x}  {y}  {x}  {f(x)}  {f(y)}
    merge x ≡ y                         reason: p1
    classes: {x, y}  {x}  {f(x)}  {f(y)}

[theory]  arithmetic assert p1: ok
    assert (x - y) ≥ 0                  →  (x - y) ∈ [0, ∞]
    assert (x - y) ≤ 0                  →  (x - y) ∈ [0, 0]

[propagate]  p2 = true  (forced by #1: ~p3 v p2)
  trail: { p3@0, p1@0, p2@0 }
[clauses]
  #0: false v true          -> satisfied
  #1: false v true          -> satisfied
  #2: false v false v true  -> satisfied
  #3: true                  -> satisfied

[theory]  euf assert p2: ok
    scan p2: (!= (f x) (f y))           → ok

[theory]  arithmetic assert p2: ok
[theory]  euf check: ok
    scan p2: (!= (f x) (f y))           → ok

[theory]  arithmetic check: ok
    feasible

[sat]"
`;

exports[`Solver trace (end-to-end) > replay snapshots > arithmetic SAT 1`] = `
"=== Formula ===
  (and (>= x 0) (<= x 10))

=== Variables ===
  p1: (>= x 0)
  p2: (<= x 10)
  proxy p3: (and p1 p2)

[clauses]
  #0: ~p3 v p1        -> 2 open
  #1: ~p3 v p2        -> 2 open
  #2: ~p1 v ~p2 v p3  -> 3 open
  #3: p3              -> unit: p3

[propagate]  p3 = true  (forced by #3: p3)
  trail: { p3@0 }
[clauses]
  #0: false v p1        -> unit: p1
  #1: false v p2        -> unit: p2
  #2: ~p1 v ~p2 v true  -> satisfied
  #3: true              -> satisfied

[theory]  euf assert p3: ok
[theory]  arithmetic assert p3: ok
[propagate]  p1 = true  (forced by #0: ~p3 v p1)
  trail: { p3@0, p1@0 }
[clauses]
  #0: false v true        -> satisfied
  #1: false v p2          -> unit: p2
  #2: false v ~p2 v true  -> satisfied
  #3: true                -> satisfied

[theory]  euf assert p1: ok
[theory]  arithmetic assert p1: ok
    assert x ≥ 0                        →  x ∈ [0, ∞]

[propagate]  p2 = true  (forced by #1: ~p3 v p2)
  trail: { p3@0, p1@0, p2@0 }
[clauses]
  #0: false v true          -> satisfied
  #1: false v true          -> satisfied
  #2: false v false v true  -> satisfied
  #3: true                  -> satisfied

[theory]  euf assert p2: ok
[theory]  arithmetic assert p2: ok
    assert x ≤ 10                       →  x ∈ [0, 10]

[theory]  euf check: ok
[theory]  arithmetic check: ok
    feasible

[sat]"
`;

exports[`Solver trace (end-to-end) > replay snapshots > arithmetic UNSAT 1`] = `
"=== Formula ===
  (and (<= (+ x y) 5) (>= x 3) (>= y 3))

=== Variables ===
  p1: (<= (+ x y) 5)
  p2: (>= x 3)
  p3: (>= y 3)
  proxy p4: (and p1 p2 p3)

[clauses]
  #0: ~p4 v p1              -> 2 open
  #1: ~p4 v p2              -> 2 open
  #2: ~p4 v p3              -> 2 open
  #3: ~p1 v ~p2 v ~p3 v p4  -> 4 open
  #4: p4                    -> unit: p4

[propagate]  p4 = true  (forced by #4: p4)
  trail: { p4@0 }
[clauses]
  #0: false v p1              -> unit: p1
  #1: false v p2              -> unit: p2
  #2: false v p3              -> unit: p3
  #3: ~p1 v ~p2 v ~p3 v true  -> satisfied
  #4: true                    -> satisfied

[theory]  euf assert p4: ok
[theory]  arithmetic assert p4: ok
[propagate]  p1 = true  (forced by #0: ~p4 v p1)
  trail: { p4@0, p1@0 }
[clauses]
  #0: false v true              -> satisfied
  #1: false v p2                -> unit: p2
  #2: false v p3                -> unit: p3
  #3: false v ~p2 v ~p3 v true  -> satisfied
  #4: true                      -> satisfied

[theory]  euf assert p1: ok
[theory]  arithmetic assert p1: ok
    assert (+ x y) ≤ 5                  →  (+ x y) ∈ [-∞, 5]

[propagate]  p2 = true  (forced by #1: ~p4 v p2)
  trail: { p4@0, p1@0, p2@0 }
[clauses]
  #0: false v true                -> satisfied
  #1: false v true                -> satisfied
  #2: false v p3                  -> unit: p3
  #3: false v false v ~p3 v true  -> satisfied
  #4: true                        -> satisfied

[theory]  euf assert p2: ok
[theory]  arithmetic assert p2: ok
    assert x ≥ 3                        →  (+ x y) ∈ [-∞, 5], x ∈ [3, ∞]

[propagate]  p3 = true  (forced by #2: ~p4 v p3)
  trail: { p4@0, p1@0, p2@0, p3@0 }
[clauses]
  #0: false v true                  -> satisfied
  #1: false v true                  -> satisfied
  #2: false v true                  -> satisfied
  #3: false v false v false v true  -> satisfied
  #4: true                          -> satisfied

[theory]  euf assert p3: ok
[theory]  arithmetic assert p3: ok
    assert y ≥ 3                        →  (+ x y) ∈ [-∞, 5], x ∈ [3, ∞], y ∈ [3, ∞]

[theory]  euf check: ok
[theory]  arithmetic check: conflict
    violation  (+ x y) = 6, above its upper bound
    infeasible  no pivot candidate for (+ x y)

[unsat]  core: [#0, #1, #2, #3, #4]"
`;

exports[`Solver trace (end-to-end) > replay snapshots > propositional contradiction (expanded mode) 1`] = `
"=== Formula ===
  (and (= x 1) (not (= x 1)))

=== Variables ===
  p1: (= x 1)
  proxy p2: (and (= x 1) ~(= x 1))

[clauses]
  #0: ~p2 v (= x 1)            -> 2 open
  #1: ~p2 v ~(= x 1)           -> 2 open
  #2: ~(= x 1) v (= x 1) v p2  -> 3 open
  #3: p2                       -> unit: p2

[propagate]  p2 = true  (forced by #3: p2)
  trail: { p2@0 }
[clauses]
  #0: false v (= x 1)            -> unit: (= x 1)
  #1: false v ~(= x 1)           -> unit: ~(= x 1)
  #2: ~(= x 1) v (= x 1) v true  -> satisfied
  #3: true                       -> satisfied

[theory]  euf assert p2: ok
[theory]  arithmetic assert p2: ok
[propagate]  (= x 1) = true  (forced by #0: ~p2 v (= x 1))
  trail: { p2@0, (= x 1)@0 }
[clauses]
  #0: false v true         -> satisfied
  #1: false v false        -> empty!
  #2: false v true v true  -> satisfied
  #3: true                 -> satisfied

[theory]  euf assert (= x 1): ok
    classes: {x}  {1}
    merge x ≡ 1                         reason: (= x 1)
    classes: {x, 1}

[theory]  arithmetic assert (= x 1): ok
    assert x ≥ 1                        →  x ∈ [1, ∞]
    assert x ≤ 1                        →  x ∈ [1, 1]

[conflict]  #1: ~p2 v ~(= x 1) — all literals false
[unsat]  core: [#0, #1, #2, #3]"
`;

exports[`Solver trace (end-to-end) > replay snapshots > propositional contradiction 1`] = `
"=== Formula ===
  (and (= x 1) (not (= x 1)))

=== Variables ===
  p1: (= x 1)
  proxy p2: (and p1 ~p1)

[clauses]
  #0: ~p2 v p1       -> 2 open
  #1: ~p2 v ~p1      -> 2 open
  #2: ~p1 v p1 v p2  -> 3 open
  #3: p2             -> unit: p2

[propagate]  p2 = true  (forced by #3: p2)
  trail: { p2@0 }
[clauses]
  #0: false v p1       -> unit: p1
  #1: false v ~p1      -> unit: ~p1
  #2: ~p1 v p1 v true  -> satisfied
  #3: true             -> satisfied

[theory]  euf assert p2: ok
[theory]  arithmetic assert p2: ok
[propagate]  p1 = true  (forced by #0: ~p2 v p1)
  trail: { p2@0, p1@0 }
[clauses]
  #0: false v true         -> satisfied
  #1: false v false        -> empty!
  #2: false v true v true  -> satisfied
  #3: true                 -> satisfied

[theory]  euf assert p1: ok
    classes: {x}  {1}
    merge x ≡ 1                         reason: p1
    classes: {x, 1}

[theory]  arithmetic assert p1: ok
    assert x ≥ 1                        →  x ∈ [1, ∞]
    assert x ≤ 1                        →  x ∈ [1, 1]

[conflict]  #1: ~p2 v ~p1 — all literals false
[unsat]  core: [#0, #1, #2, #3]"
`;

exports[`Solver trace (end-to-end) > replay snapshots > quantifier UNSAT 1`] = `
"=== Formula ===
  (and (= (f a) 1) (forall ((x Int)) (!= (f x) 1)) ; forall_f_neq_1)

=== Variables ===
  p1: (= (f a) 1)

[clauses]
  #0: p1  -> unit: p1

[propagate]  p1 = true  (forced by #0: p1)
  trail: { p1@0 }
[clauses]
  #0: true  -> satisfied

[theory]  euf assert p1: ok
    classes: {a}  {f(a)}  {1}
    merge f(a) ≡ 1                      reason: p1
    classes: {a}  {f(a), 1}

[theory]  arithmetic assert p1: ok
[theory]  euf check: ok
[theory]  arithmetic check: ok
    feasible

[sat]
[quant]  round 0: 1 lemmas
[propagate]  p1 = true  (forced by #0: p1)
  trail: { p1@0 }
[clauses]
  #0: true  -> satisfied

[theory]  euf assert p1: ok
    skip  f(a) already equal

[theory]  arithmetic assert p1: ok
[conflict]  #1: ~p1 — all literals false
[unsat]  core: [#0, #1]"
`;
